# wind_bench

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
ai_virtual/: model.py  training.py  training_ignit.py
ai_virtual_lightning/: dataset.py  train.py
docs/: report.md
notebooks/: columns.txt  data_ioipynb.ipynb  torchmetrics_usage.ipynb  use_data.ipynb  use_mlflow_server.ipynb  wb_data.ipynb  wind_process.ipynb
scripts/: Train.py  args.json  args.py  display.py  lit_predict.py  lit_train.py  predict.py  test.py  train.py  train_wb.py
scripts/dataset/: args.json  args.py  azure_blobs.py  config.json  display_keys.py  download_numpy.py  download_parquet.py  split_ml_parquet.py  wb_stats.py
scripts/virtual/: Train.py  args.json  arguments.py  config.json  display.py  find_lr.py  lit_predict.py  lit_train.py  model.py  predict.py  train.py
tests/: args.json  args.py  config.json  test_args.py  test_config.py  test_dataset.py  test_models.py  test_normalize.py  test_sensor_descr.py
tests/data/: config.json
tests/data/100_128/wind_bench.parquet/id=Exp0.0/: 4f08446266c142ef9a6b652f9aca2833-0.parquet
tests/data/100_128/wind_bench.parquet/id=Exp0.10/: 287ef8f493d548ffa9a1be8d6bb2ec23-0.parquet
tests/data/100_128/wind_bench.parquet/id=Exp0.12/: 2273179532ff445d9e32a8e11c242d41-0.parquet
tests/data/100_128/wind_bench.parquet/id=Exp0.16/: 3bdde7741e9546b6a39169fd0f007b83-0.parquet
tests/data/wb/: stats.json
tests/data/wb/100_128/: test_labels.npy  train_data.npy
virtual/: Training.py  autre.py  logger.py  model.py
virtual/loss_function/: __init__.py  rmse.py
virtual/models/: CNN.py  LSTM.py  MLP.py  RNN.py  __init__.py  model.py
wb/data/wb/100_128/: test_data.npy  train_labels.npy
wb/dataset/: __init__.py  data_module.py  dataloader.py  normalize.py  sensor_description.py
wb/dataset/s3/: __init__.py  config.py
wb/dataset/utils/: meta_singleton.py  time_utils.py
wb/post/: eq_load.py  psd.py  rainflow.py
wb/scripts/: __init__.py
wb/tests/: test_config.py  test_dataset.py  test_models.py  test_normalize.py
wb/utils/: args.py  arguments.py  config.py  display.py  meta_singleton.py  time_utils.py
wb/virtual/: Training.py  checkpoint.py  context.py  feature.py  logger.py  metrics_collection.py  prediction.py  predictions.py  training.py
wb/virtual/loss_function/: __init__.py  dilate.py  rmse.py
wb/virtual/models/: CNN.py  LSTM.py  LSTM_CNN.py  MLP.py  Model_UNET.py  RNN.py  UNet1D.py  __init__.py  model.py
wbvirtual/dataset/: __init__.py  dataloader.py  sensor_description.py
wbvirtual/dataset/s3/: __init__.py  config.py
wbvirtual/post/: eq_load.py  psd.py
wbvirtual/scripts/: __init__.py
wbvirtual/train/: checkpoint.py  context.py  feature.py  metric_plot.py  predictions.py  training.py
wbvirtual/train/loss_function/: __init__.py
wbvirtual/train/models/: CNN.py  LSTM_CNN.py  UNet1D.py  __init__.py
wbvirtual/utils/: arguments.py  display.py
wbvirtual/utils/cf/: config_test.json  config_toy.json
(+197 files in other folders)
