[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]

name = "wb-virtual"
version = "0.0.1"

authors = [
  { name="Jean-François LECOMTE", email="jean-francois.lecomte@ifpen.fr" },
]

description = "Virtual Sensing on DTU Benchmark data"

requires-python = ">=3"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: IFPEN Property",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = {namespaces = false}  # Disable implicit namespaces

[project.scripts]
wb-train = "scripts.virtual.train:main"
wb-predict = "scripts.virtual.predict:main"
wb-display = "scripts.virtual.display:main"
wb-findlr = "scripts.virtual.find_lr:main"

[project.urls]
"Homepage" = "https://github.com/zwergon/wind_bench"
"Bug Tracker" = "https://github.com/zwergon/wind_bench/issues"
