[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]

name = "wb-virtual"
version = "0.0.1"

authors = [
  { name="Jean-François LECOMTE", email="jean-francois.lecomte@ifpen.fr" },
]

description = "Virtual Sensing on DTU Benchmark data"

requires-python = ">=3"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: IFPEN Property",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = {} 

[project.scripts]
wb-train = "wb.scripts:main_train"
wb-predict = "wb.scripts:main_predict"
wb-display = "wb.scripts:main_display"
wb-findlr = "wb.scripts:main_findlr"

[project.urls]
"Homepage" = "https://github.com/zwergon/wind_bench"
"Bug Tracker" = "https://github.com/zwergon/wind_bench/issues"
